--- a/style.css
+++ b/style.css
@@ -11,14 +11,14 @@ header {
 
 .logo {
   width: 220px;
-  margin: 50px;
+  margin: 20px;
   border-radius: 120px;
   box-shadow: 5px 3px 3px rgb(99, 96, 96);
 }
 
 li {
   display: inline-block;
-  margin: 40px;
+  margin: 30px;
 }
 
 a {
@@ -30,31 +30,36 @@ a:hover{
   transition: 0.3s all;
 }
 
-#inscreva-se-btn{
+#login-btn{
   border: 2px solid rgb(224, 218, 228);
   padding: 10px;
   border-radius: 15px;
 }
 
-#inscreva-se-btn:hover{
+#login-btn:hover{
   background-color: rgb(8, 8, 8);
   color: white;
 }
-
 
 .paragraph-title {
   font-size: 32px;
   font-weight: bold;
 }
 
+h1 {
+  text-align: center;
+  font-size: 42px;
+}
+
 .principal {
   display: flex;
-  justify-content: space-around;
-  padding: 80px
+  justify-content:space-between;
+  padding: 25px;
 }
 
 .img-principal {
   width: 30%;
   box-shadow: 10px 5px 5px rgb(56, 55, 55);
+  margin: 50px;
 
 }
