--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -61,6 +63,7 @@ a:hover{
 h1 {
   text-align: center;
   font-size: 42px;
+  font-family: 'Roboto Mono', monospace;
 }
 
 .principal {
@@ -78,6 +81,7 @@ h1 {
 
 p {
   font-size: 16px;
+  font-family: 'Roboto Mono', monospace;
 }
 
 footer {
